--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-body{
+.bodyContainer{
+    width: 100%;
+    height: 100vh;
     background-color: #2b2b2b;
     color: #fff;
+    position: relative;
 }
 .hero{
     text-align: center;
