--- a/src/styleSheets/SecondClocksList.css
+++ b/src/styleSheets/SecondClocksList.css
@@ -1,4 +1,27 @@
-.listClocks{
+.clocks{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+}
+.clocks__add{
+    font-weight: 600;
+    background-color: #212121;
+    color: #fff;
+    padding: 7px 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.clocks__add:hover{
+    background-color: #403f3f;
+}
+.list{
+    width: 50%;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;  
+    background-color: #212121;
+    padding: 30px;
+    border-radius: 10px;
 }
