Fin de funciones basicas

--- a/src/styleSheets/Clocks.css
+++ b/src/styleSheets/Clocks.css
@@ -1,7 +1,6 @@
 .clock{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .clock__btn{
     background-color: transparent;
